# simplecomfy

./: README.md  __init__.py  pyproject.toml
web/: index.html
web/js/: app.js  comfyapi.js  normal_workflow_api.json  regen_bg_styled_workflow_api.json  style_workflow_api.json
